[package]
name = "laat"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.8.1", features = ["full"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
tracing = "0.1.26"
structopt = "0.3.22"
handlebars = "4.1.0"

walkdir = "2.3.2"
ogg_metadata = "0.4.1"
async-trait = "0.1.50"
tracing-subscriber = "0.2.19"
armake2 = "0.3.0"
futures-util = "0.3.15"
async-recursion = "0.3.2"
hemtt-serde = { path = "./hemtt-serde" }
